Update backend