@@ -5,27 +5,41 @@ import com.clouddocs.backend.repository.*;
 import com.clouddocs.backend.security.AuthzUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
-
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
- * ✅ SIMPLIFIED: WorkflowService without retry complications
+ * ✅ COMPLETE PRODUCTION-READY WorkflowService
+ * 
+ * Features:
+ * - Fixes "Assigned to: Unassigned" issues
+ * - Proper task creation and assignment
+ * - Enhanced workflow progression
+ * - Safe DTO mapping with lazy loading protection
+ * - Comprehensive error handling and logging
+ * - Full audit trail integration
+ * - User permission management
+ * - Notification system integration
  */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class WorkflowService {
 
+    // ===== DEPENDENCIES =====
     private final WorkflowTemplateRepository templateRepository;
     private final WorkflowInstanceRepository instanceRepository;
     private final WorkflowStepRepository stepRepository;
@@ -39,296 +53,279 @@ public class WorkflowService {
 
     @Autowired
     private AuditService auditService;
-    
 
-
+    // ===== ENUMS =====
     private enum StepOutcome { CONTINUE, APPROVED, REJECTED }
 
+    // ===== MAIN WORKFLOW CREATION METHODS =====
+
     /**
-     * ✅ MAIN METHOD: Start workflow - simplified without retry
+     * ✅ ENHANCED: Start workflow with explicit user context (FIXES UNASSIGNED ISSUE)
      */
     @Transactional
-    public WorkflowInstance startWorkflow(Long documentId, UUID templateId, 
-                                    String title, String description, String priority) {
-        log.info("🔄 Starting workflow - DocumentID: {}, TemplateID: {}, Priority: {}", 
-                documentId, templateId, priority);
+    public WorkflowInstance startWorkflowWithUser(Long documentId, UUID templateId, 
+                                                 String title, String description, 
+                                                 String priority, Long userId) {
+        log.info("🚀 Starting workflow with user context - DocumentID: {}, TemplateID: {}, UserID: {}, Priority: {}", 
+                documentId, templateId, userId, priority);
 
         try {
-            // Load document
-            Document document = documentRepository.findById(documentId)
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Document not found"));
+            // Load and validate all required entities
+            Document document = loadAndValidateDocument(documentId);
+            WorkflowTemplate template = loadTemplateWithStepsAndRoles(templateId);
+            User initiator = loadAndValidateUser(userId);
 
-            // ✅ CRITICAL FIX: Use JOIN FETCH to load template with steps
-          // ✅ First query: load template with steps (without roles)
-        WorkflowTemplate template = templateRepository.findByIdWithSteps(templateId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow template not found"));
+            validateTemplateActive(template);
 
-        // ✅ Second query: load roles for those steps
-        List<WorkflowStep> stepsWithRoles = stepRepository.findStepsWithRoles(templateId);
-        template.setSteps(new ArrayList<>(stepsWithRoles));
+            log.info("✅ Loaded template '{}' with {} steps for user '{}'", 
+                    template.getName(), 
+                    template.getSteps() != null ? template.getSteps().size() : 0,
+                    initiator.getUsername());
 
-            if (!Boolean.TRUE.equals(template.getIsActive())) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Template is not active");
-            }
-
-            log.info("✅ Loaded template '{}' with {} steps", template.getName(), 
-                    template.getSteps() != null ? template.getSteps().size() : 0);
-
-            User initiator = getCurrentUser();
-
-            // Create workflow instance
-            WorkflowInstance instance = new WorkflowInstance(template, document, initiator, 
-                                                            safeSlaHours(template.getDefaultSlaHours()));
+            // Create workflow instance with proper user assignment
+            WorkflowInstance instance = createWorkflowInstance(template, document, initiator, title, description, priority);
             
-            instance.setTitle(title != null ? title : "Workflow for " + document.getOriginalFilename());
-            instance.setDescription(description);
-            instance.setPriorityFromString(priority);
-            instance.setStatus(WorkflowStatus.IN_PROGRESS);
-            instance.setStartDate(LocalDateTime.now());
-            instance.setCurrentStepOrder(1);
-
-            // ✅ Save workflow instance
+            // Save workflow instance first
             instance = instanceRepository.saveAndFlush(instance);
             log.info("✅ Saved workflow instance with ID: {}", instance.getId());
 
-            // Document becomes PENDING when workflow starts
-            trySetDocumentPending(document);
+            // Update document status
+            updateDocumentStatus(document, DocumentStatus.PENDING);
 
-            // ✅ SAFE: Generate tasks using the loaded template steps
-            boolean tasksCreated = generateTasksForStepSafe(instance, template, 1);
+            // ✅ CRITICAL FIX: Generate tasks with proper user assignments
+            boolean tasksCreated = generateInitialTasks(instance, template);
             if (!tasksCreated) {
-                throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, "No approvers found for step 1");
+                throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, 
+                    "No approvers found for initial workflow step");
             }
 
-            logHistory(instance, "WORKFLOW_STARTED", "Workflow started by " + safeName(initiator), initiator);
+            // Log workflow creation
+            logWorkflowHistory(instance, "WORKFLOW_STARTED", 
+                             "Workflow started by " + getUserDisplayName(initiator), initiator);
             
-            auditService.logWorkflowAction(
-                "Workflow Started: " + template.getName() + 
-                (title != null && !title.isEmpty() ? " - " + title : ""),
-                instance.getId().toString(),
-                initiator.getUsername()
-            );
+            auditWorkflowAction(instance, "Workflow Started", initiator, 
+                              "Template: " + template.getName() + (title != null ? " - " + title : ""));
             
-            log.info("✅ Workflow instance {} created successfully", instance.getId());
+            log.info("✅ Workflow instance {} created successfully with proper assignments", instance.getId());
             return instance;
             
         } catch (ResponseStatusException e) {
-            // Re-throw HTTP exceptions as-is
             throw e;
         } catch (Exception e) {
             log.error("❌ Error starting workflow: {}", e.getMessage(), e);
-            
-            // ✅ Simple error handling without retry complications
-            String errorMsg = "Failed to create workflow";
-            if (e.getMessage() != null) {
-                errorMsg += ": " + e.getMessage();
-            }
-            
-            // Log failure for audit
-            try {
-                auditService.logWorkflowActionWithStatus(
-                    "Workflow Creation Failed: " + e.getMessage(),
-                    "Template-" + templateId,
-                    getCurrentUser().getUsername(),
-                    AuditLog.Status.FAILED
-                );
-            } catch (Exception auditEx) {
-                log.warn("Failed to log audit: {}", auditEx.getMessage());
-            }
-            
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, errorMsg);
+            handleWorkflowCreationFailure(templateId, userId, e);
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, 
+                "Failed to create workflow: " + e.getMessage());
         }
     }
 
     /**
-     * ✅ SAFE: Task generation using pre-loaded template
-     */
-    private boolean generateTasksForStepSafe(WorkflowInstance instance, WorkflowTemplate template, int stepOrder) {
-        try {
-            log.info("🔄 Generating tasks for step {} using pre-loaded template", stepOrder);
-            
-            if (template.getSteps() == null || template.getSteps().isEmpty()) {
-                log.warn("⚠️ Template has no steps defined");
-                return false;
-            }
-
-            boolean anyTaskCreated = false;
-
-            for (WorkflowStep step : template.getSteps()) {
-                if (step.getStepOrder() == null || !step.getStepOrder().equals(stepOrder)) {
-                    continue;
-                }
-
-                log.info("🔄 Processing step: {} (order: {})", step.getName(), step.getStepOrder());
-
-                List<User> approvers = findApproversForStep(step);
-
-                if (approvers.isEmpty()) {
-                    log.warn("⚠️ No approvers found for step: {}", step.getName());
-                    continue;
-                }
-
-                log.info("✅ Found {} approvers for step: {}", approvers.size(), step.getName());
-
-                for (User user : approvers) {
-                    WorkflowTask task = new WorkflowTask(instance, step, user, step.getName());
-                    if (step.getSlaHours() != null && step.getSlaHours() > 0) {
-                        task.setDueDate(LocalDateTime.now().plusHours(step.getSlaHours()));
-                    } else if (instance.getDueDate() != null) {
-                        task.setDueDate(instance.getDueDate());
-                    }
-                    taskRepository.save(task);
-
-                    logHistory(instance, "TASK_ASSIGNED", "Task assigned to " + safeName(user), getCurrentUser());
-
-                    try {
-                        notificationService.notifyTaskAssigned(user, task);
-                    } catch (Exception e) {
-                        log.warn("Failed to send task assignment notification: {}", e.getMessage());
-                    }
-
-                    anyTaskCreated = true;
-                }
-            }
-
-            log.info("✅ Task generation completed. Tasks created: {}", anyTaskCreated);
-            return anyTaskCreated;
-            
-        } catch (Exception e) {
-            log.error("❌ Error generating tasks for step {}: {}", stepOrder, e.getMessage(), e);
-            return false;
-        }
-    }
-
-    /**
-     * ✅ TASK COMPLETION: Simplified without retry
+     * ✅ BACKWARD COMPATIBILITY: Legacy method
      */
     @Transactional
-    public void completeTask(Long taskId, TaskAction action, String comments) {
-        log.info("🔄 Attempting task completion - TaskID: {}, Action: {}", taskId, action);
+    public WorkflowInstance startWorkflow(Long documentId, UUID templateId, 
+                                        String title, String description, String priority) {
+        User currentUser = getCurrentUserSafe();
+        return startWorkflowWithUser(documentId, templateId, title, description, priority, currentUser.getId());
+    }
+
+    // ===== TASK MANAGEMENT METHODS =====
+
+    /**
+     * ✅ ENHANCED: Process task action with detailed response (FIXES MISSING APPROVE/REJECT)
+     */
+    @Transactional
+    public Map<String, Object> processTaskActionWithUser(Long taskId, String action, 
+                                                        String comments, Long userId) {
+        log.info("🔄 Processing task action - TaskID: {}, Action: {}, UserID: {}", taskId, action, userId);
         
         try {
-            WorkflowTask task = taskRepository.findById(taskId)
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Task not found with ID: " + taskId));
+            // Validate and load entities
+            TaskAction taskAction = validateTaskAction(action);
+            WorkflowTask task = loadTaskWithWorkflow(taskId);
+            User currentUser = loadAndValidateUser(userId);
 
-            User current = getCurrentUser();
-
-            // Authorization check
-            boolean isAssignee = task.getAssignedTo() != null && task.getAssignedTo().getId().equals(current.getId());
-            if (!isAssignee && !authz.isManagerOrAdmin()) {
-                throw new ResponseStatusException(HttpStatus.FORBIDDEN, 
-                    "Not authorized to complete this task. Task is assigned to: " + 
-                    (task.getAssignedTo() != null ? task.getAssignedTo().getUsername() : "unknown"));
-            }
-
+            // Perform authorization and state checks
+            validateTaskActionAuthorization(task, currentUser);
             WorkflowInstance instance = task.getWorkflowInstance();
-            if (instance == null) {
-                throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, "Task without workflow instance");
-            }
+            validateWorkflowAndTaskState(instance, task);
+
+            // Complete the task with enhanced tracking
+            completeTaskWithDetails(task, taskAction, comments, currentUser);
+
+            // Process workflow progression
+            Map<String, Object> progressionResult = processWorkflowProgression(instance, currentUser);
+
+            // Prepare comprehensive response
+            Map<String, Object> result = buildTaskActionResponse(task, taskAction, instance, progressionResult);
             
-            // Check workflow status
-            if (instance.getStatus() == WorkflowStatus.APPROVED || 
-                instance.getStatus() == WorkflowStatus.REJECTED || 
-                instance.getStatus() == WorkflowStatus.CANCELLED) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, 
-                    "Cannot complete task for a finalized workflow. Current status: " + instance.getStatus());
-            }
-
-            // Check task status
-            if (task.getStatus() != TaskStatus.PENDING) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, 
-                    "Task is not in PENDING status. Current status: " + task.getStatus());
-            }
-
-            // Complete the task
-            task.complete(action, comments, current);
-            taskRepository.saveAndFlush(task);
-
-            logHistory(instance, "TASK_COMPLETED", 
-                      "Task completed by " + safeName(current) + " with action " + action, current);
-
-            String auditActivity = String.format("Task %s: %s%s", 
-                action == TaskAction.APPROVE ? "Approved" : "Rejected",
-                task.getTitle() != null ? task.getTitle() : "Workflow Task",
-                comments != null && !comments.isEmpty() ? " - " + comments : ""
-            );
+            log.info("✅ Task action completed successfully - TaskID: {}, Action: {}, WorkflowStatus: {}", 
+                    taskId, action, instance.getStatus());
             
-            auditService.logWorkflowAction(auditActivity, instance.getId().toString(), current.getUsername());
-
-            log.info("✅ Task {} completed by {} with action {}", taskId, current.getUsername(), action);
-
-            // Notify task completion
-            try {
-                notificationService.notifyTaskCompleted(current, task, action);
-            } catch (Exception e) {
-                log.warn("Failed to send task completion notification: {}", e.getMessage());
-            }
-
-            // Evaluate step outcome
-            WorkflowStep currentStep = getCurrentStepSafe(instance);
-            if (currentStep != null) {
-                StepOutcome outcome = evaluateStepOutcome(instance, currentStep);
-                log.debug("Step outcome for step {}: {}", currentStep.getStepOrder(), outcome);
-                handleStepOutcome(instance, currentStep, outcome);
-            }
+            return result;
             
         } catch (ResponseStatusException e) {
             throw e;
         } catch (Exception e) {
-            log.error("❌ Error completing task {}: {}", taskId, e.getMessage(), e);
+            log.error("❌ Error processing task action - TaskID: {}: {}", taskId, e.getMessage(), e);
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, 
-                "Failed to complete task: " + e.getMessage());
+                "Failed to process task action: " + e.getMessage());
         }
     }
 
     /**
-     * ✅ WORKFLOW CANCELLATION: Simplified without retry
+     * ✅ LEGACY COMPATIBILITY: String-based task action processing
+     */
+    public void processTaskAction(Long taskId, String action, String comments) {
+        User currentUser = getCurrentUserSafe();
+        processTaskActionWithUser(taskId, action, comments, currentUser.getId());
+    }
+
+    /**
+     * ✅ LEGACY COMPATIBILITY: Complete task with TaskAction enum
+     */
+    @Transactional
+    public void completeTask(Long taskId, TaskAction action, String comments) {
+        processTaskAction(taskId, action.toString(), comments);
+    }
+
+    // ===== ENHANCED QUERY METHODS =====
+
+    /**
+     * ✅ ENHANCED: Get user workflows with detailed pagination (FIXES DISAPPEARING WORKFLOWS)
+     */
+    @Transactional(readOnly = true)
+    public Map<String, Object> getUserWorkflowsWithDetails(Long userId, int page, int size, String status) {
+        try {
+            log.info("📋 Getting workflows for user {} - page: {}, size: {}, status: {}", 
+                    userId, page, size, status);
+
+            User user = loadAndValidateUser(userId);
+            Pageable pageable = PageRequest.of(page, size, Sort.by("createdDate").descending());
+            
+            // Get workflows with proper filtering
+            Page<WorkflowInstance> workflowsPage = getFilteredUserWorkflows(user, status, pageable);
+
+            // Convert to safe DTOs
+            List<Map<String, Object>> workflowDTOs = workflowsPage.getContent().stream()
+                    .map(this::convertWorkflowToSafeDTO)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+
+            // Build paginated response
+            Map<String, Object> response = buildPaginatedResponse(workflowsPage, workflowDTOs);
+
+            log.info("✅ Retrieved {} workflows for user {}", workflowDTOs.size(), user.getUsername());
+            return response;
+
+        } catch (Exception e) {
+            log.error("❌ Error getting user workflows: {}", e.getMessage(), e);
+            return createEmptyPaginatedResponse(page, size);
+        }
+    }
+
+    /**
+     * ✅ ENHANCED: Get workflow details with tasks for approval interface (FIXES MISSING STEPS)
+     */
+    @Transactional(readOnly = true)
+    public Map<String, Object> getWorkflowDetailsWithTasks(Long workflowId, Long userId) {
+        try {
+            log.info("🔍 Getting workflow details with tasks - WorkflowID: {}, UserID: {}", workflowId, userId);
+
+            WorkflowInstance workflow = instanceRepository.findByIdWithTasksAndSteps(workflowId)
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow not found"));
+
+            User user = loadAndValidateUser(userId);
+
+            // Check access permissions
+            if (!canUserAccessWorkflow(user, workflow)) {
+                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Access denied to this workflow");
+            }
+
+            Map<String, Object> details = convertWorkflowToDetailedDTO(workflow, user);
+            
+            log.info("✅ Workflow details retrieved for WorkflowID: {}", workflowId);
+            return details;
+
+        } catch (ResponseStatusException e) {
+            throw e;
+        } catch (Exception e) {
+            log.error("❌ Error getting workflow details - WorkflowID: {}: {}", workflowId, e.getMessage(), e);
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow not found or access denied");
+        }
+    }
+
+    /**
+     * ✅ ENHANCED: Get user tasks with detailed information
+     */
+    @Transactional(readOnly = true)
+    public List<Map<String, Object>> getMyTasksWithDetails(Long userId) {
+        try {
+            log.info("📋 Getting tasks for user {}", userId);
+
+            User user = loadAndValidateUser(userId);
+            List<WorkflowTask> tasks = taskRepository.findByAssignedToAndStatusOrderByCreatedAtDesc(user, TaskStatus.PENDING);
+
+            List<Map<String, Object>> taskDTOs = tasks.stream()
+                    .map(this::convertTaskToDetailedDTO)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+
+            log.info("✅ Retrieved {} tasks for user {}", taskDTOs.size(), user.getUsername());
+            return taskDTOs;
+
+        } catch (Exception e) {
+            log.error("❌ Error getting user tasks: {}", e.getMessage(), e);
+            return new ArrayList<>();
+        }
+    }
+
+    // ===== WORKFLOW CANCELLATION =====
+
+    /**
+     * ✅ ENHANCED: Cancel workflow with detailed audit trail
      */
     @Transactional
     public void cancelWorkflow(Long instanceId, String reason) {
-        log.info("🔄 Attempting to cancel workflow - InstanceID: {}, Reason: {}", instanceId, reason);
+        log.info("🔄 Cancelling workflow - InstanceID: {}, Reason: {}", instanceId, reason);
         
         try {
             WorkflowInstance instance = instanceRepository.findById(instanceId)
                     .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow not found"));
 
-            if (!authz.isInitiatorOrManager(instance)) {
-                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized to cancel workflow");
-            }
+            User currentUser = getCurrentUserSafe();
 
-            if (instance.getStatus() == WorkflowStatus.APPROVED || instance.getStatus() == WorkflowStatus.REJECTED) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, "Cannot cancel a finalized workflow");
-            }
-            
-            if (instance.getStatus() == WorkflowStatus.CANCELLED) {
-                return; // Idempotent cancel
-            }
+            // Authorization and state validation
+            validateCancellationAuthorization(instance);
+            validateCancellationState(instance);
 
+            // Cancel workflow
             WorkflowStatus oldStatus = instance.getStatus();
             instance.setStatus(WorkflowStatus.CANCELLED);
             instance.setEndDate(LocalDateTime.now());
+            instance.setUpdatedDate(LocalDateTime.now());
             
             instance = instanceRepository.saveAndFlush(instance);
             
-            log.info("✅ Workflow {} status updated: {} -> CANCELLED", instanceId, oldStatus);
-
-            logHistory(instance, "WORKFLOW_CANCELLED", 
-                      (reason == null || reason.isBlank()) ? "Cancelled" : reason, getCurrentUser());
-
-            auditService.logWorkflowAction(
-                "Workflow Cancelled: " + (reason != null && !reason.isBlank() ? reason : "No reason provided"),
-                instance.getId().toString(),
-                getCurrentUser().getUsername()
-            );
-
-            // Notify initiator
-            try {
-                if (instance.getInitiatedBy() != null) {
-                    notificationService.notifyWorkflowRejected(instance.getInitiatedBy(), instance);
-                }
-            } catch (Exception e) {
-                log.warn("Failed to send cancellation notification: {}", e.getMessage());
+            // Cancel pending tasks
+            cancelPendingTasks(instance, reason, currentUser);
+            
+            // Update document status
+            if (instance.getDocument() != null) {
+                updateDocumentStatus(instance.getDocument(), DocumentStatus.DRAFT);
             }
+            
+            log.info("✅ Workflow {} cancelled: {} -> CANCELLED", instanceId, oldStatus);
+
+            // Log and audit
+            logWorkflowHistory(instance, "WORKFLOW_CANCELLED", 
+                             reason != null && !reason.isBlank() ? reason : "Workflow cancelled", currentUser);
+
+            auditWorkflowAction(instance, "Workflow Cancelled", currentUser, 
+                              reason != null && !reason.isBlank() ? reason : "No reason provided");
+
+            // Send notifications
+            sendCancellationNotifications(instance, currentUser);
             
         } catch (ResponseStatusException e) {
             throw e;
@@ -339,74 +336,447 @@ public class WorkflowService {
         }
     }
 
-    /**
-     * ✅ STRING-BASED INTERFACE: Process task action
-     */
-    public void processTaskAction(Long taskId, String action, String comments) {
-        try {
-            TaskAction taskAction = TaskAction.valueOf(action.toUpperCase());
-            completeTask(taskId, taskAction, comments);
-        } catch (IllegalArgumentException e) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, 
-                "Invalid action: " + action + ". Must be APPROVE or REJECT");
-        }
-    }
+    // ===== LEGACY QUERY METHODS =====
 
-    // ===== QUERY METHODS =====
-    
     @Transactional(readOnly = true)
     public List<WorkflowTask> getMyTasks() {
         try {
-            return taskRepository.findByAssignedToAndStatus(getCurrentUser(), TaskStatus.PENDING);
+            User currentUser = getCurrentUserSafe();
+            return taskRepository.findByAssignedToAndStatus(currentUser, TaskStatus.PENDING);
         } catch (Exception e) {
             log.error("❌ Error getting user tasks: {}", e.getMessage(), e);
-            return List.of();
+            return new ArrayList<>();
         }
     }
 
     @Transactional(readOnly = true)
     public List<WorkflowInstance> getMyWorkflows() {
         try {
-            return instanceRepository.findByInitiatedByOrderByStartDateDesc(getCurrentUser());
+            User currentUser = getCurrentUserSafe();
+            return instanceRepository.findByInitiatedByOrderByStartDateDesc(currentUser);
         } catch (Exception e) {
             log.error("❌ Error getting user workflows: {}", e.getMessage(), e);
-            return List.of();
+            return new ArrayList<>();
         }
     }
 
     @Transactional(readOnly = true)
     public WorkflowInstance getWorkflowById(Long instanceId) {
         return instanceRepository.findById(instanceId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow not found with ID: " + instanceId));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Workflow not found"));
     }
 
     @Transactional(readOnly = true)
     public WorkflowTask getTaskById(Long taskId) {
         return taskRepository.findById(taskId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Task not found with ID: " + taskId));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Task not found"));
     }
 
-    // ===== ALL HELPER METHODS REMAIN THE SAME =====
-    
+    // ===== PRIVATE HELPER METHODS =====
+
+    /**
+     * ✅ Load and validate document
+     */
+    private Document loadAndValidateDocument(Long documentId) {
+        return documentRepository.findById(documentId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Document not found"));
+    }
+
+    /**
+     * ✅ Load and validate user
+     */
+    private User loadAndValidateUser(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+    }
+
+    /**
+     * ✅ Load template with steps and roles using safe fetching
+     */
+    private WorkflowTemplate loadTemplateWithStepsAndRoles(UUID templateId) {
+        try {
+            // Load template with basic steps
+            WorkflowTemplate template = templateRepository.findByIdWithSteps(templateId)
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Template not found"));
+
+            // Load steps with roles to avoid lazy loading issues
+            if (template.getSteps() != null && !template.getSteps().isEmpty()) {
+                List<WorkflowStep> stepsWithRoles = stepRepository.findStepsWithRoles(templateId);
+                template.setSteps(new ArrayList<>(stepsWithRoles));
+            }
+
+            return template;
+        } catch (ResponseStatusException e) {
+            throw e;
+        } catch (Exception e) {
+            log.error("Error loading template with steps: {}", e.getMessage(), e);
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Template not found");
+        }
+    }
+
+    /**
+     * ✅ Validate template is active
+     */
+    private void validateTemplateActive(WorkflowTemplate template) {
+        if (!Boolean.TRUE.equals(template.getIsActive())) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Template is not active");
+        }
+    }
+
+    /**
+     * ✅ Create workflow instance with proper assignments
+     */
+    private WorkflowInstance createWorkflowInstance(WorkflowTemplate template, Document document, 
+                                                  User initiator, String title, String description, 
+                                                  String priority) {
+        WorkflowInstance instance = new WorkflowInstance();
+        instance.setTemplate(template);
+        instance.setDocument(document);
+        instance.setInitiatedBy(initiator); // ✅ CRITICAL: Proper user assignment
+        
+        // Set enhanced properties
+        instance.setTitle(title != null && !title.trim().isEmpty() ? title : 
+                         "Document Approval: " + document.getOriginalFilename());
+        instance.setDescription(description);
+        instance.setPriority(parsePriority(priority));
+        instance.setStatus(WorkflowStatus.IN_PROGRESS);
+        instance.setStartDate(LocalDateTime.now());
+        instance.setCreatedDate(LocalDateTime.now());
+        instance.setUpdatedDate(LocalDateTime.now());
+        instance.setCurrentStepOrder(1);
+        
+        // Set SLA
+        if (template.getDefaultSlaHours() != null && template.getDefaultSlaHours() > 0) {
+            instance.setDueDate(LocalDateTime.now().plusHours(template.getDefaultSlaHours()));
+        }
+        
+        return instance;
+    }
+
+    /**
+     * ✅ CRITICAL FIX: Generate initial tasks with proper assignments
+     */
+    private boolean generateInitialTasks(WorkflowInstance instance, WorkflowTemplate template) {
+        try {
+            log.info("🔄 Generating initial tasks for workflow {}", instance.getId());
+            
+            if (template.getSteps() == null || template.getSteps().isEmpty()) {
+                log.warn("⚠️ Template has no steps defined");
+                return false;
+            }
+
+            boolean anyTaskCreated = false;
+
+            // Find steps for the first step order
+            List<WorkflowStep> firstSteps = template.getSteps().stream()
+                    .filter(step -> step.getStepOrder() != null && step.getStepOrder().equals(1))
+                    .collect(Collectors.toList());
+
+            for (WorkflowStep step : firstSteps) {
+                log.info("🔄 Processing initial step: '{}' (order: {})", step.getName(), step.getStepOrder());
+
+                // Find approvers for this step
+                List<User> approvers = findApproversForStep(step);
+
+                if (approvers.isEmpty()) {
+                    log.warn("⚠️ No approvers found for step: {}", step.getName());
+                    continue;
+                }
+
+                log.info("✅ Found {} approvers for step '{}': {}", 
+                        approvers.size(), step.getName(),
+                        approvers.stream().map(User::getUsername).collect(Collectors.joining(", ")));
+
+                // Create tasks with proper assignment
+                for (User approver : approvers) {
+                    WorkflowTask task = createTaskWithAssignment(instance, step, approver);
+                    taskRepository.save(task);
+
+                    logWorkflowHistory(instance, "TASK_ASSIGNED", 
+                                     "Task '" + step.getName() + "' assigned to " + getUserDisplayName(approver), 
+                                     instance.getInitiatedBy());
+
+                    // Send notification
+                    sendTaskAssignmentNotification(approver, task);
+
+                    anyTaskCreated = true;
+                }
+            }
+
+            log.info("✅ Initial task generation completed. Tasks created: {}", anyTaskCreated);
+            return anyTaskCreated;
+            
+        } catch (Exception e) {
+            log.error("❌ Error generating initial tasks: {}", e.getMessage(), e);
+            return false;
+        }
+    }
+
+    /**
+     * ✅ ENHANCED: Find approvers with improved logic
+     */
+    private List<User> findApproversForStep(WorkflowStep step) {
+        List<User> approvers = new ArrayList<>();
+        
+        try {
+            // First, check for directly assigned approvers
+            if (step.getAssignedApprovers() != null && !step.getAssignedApprovers().isEmpty()) {
+                for (User user : step.getAssignedApprovers()) {
+                    if (isUserEligible(user)) {
+                        approvers.add(user);
+                    }
+                }
+                if (!approvers.isEmpty()) {
+                    log.debug("Found {} directly assigned approvers for step '{}'", approvers.size(), step.getName());
+                    return approvers;
+                }
+            }
+
+            // Find approvers by role
+            List<WorkflowStepRole> stepRoles = stepRoleRepository.findByStepId(step.getId());
+            if (!stepRoles.isEmpty()) {
+                Set<Role> requiredRoles = stepRoles.stream()
+                        .map(WorkflowStepRole::getRoleName)
+                        .collect(Collectors.toSet());
+
+                log.debug("Looking for users with roles: {} for step '{}'", 
+                         requiredRoles.stream().map(Role::toString).collect(Collectors.joining(", ")), 
+                         step.getName());
+
+                for (Role role : requiredRoles) {
+                    List<User> usersWithRole = userRepository.findByRoleAndActiveAndEnabled(role, true, true);
+                    for (User user : usersWithRole) {
+                        if (isUserEligible(user) && !approvers.contains(user)) {
+                            approvers.add(user);
+                        }
+                    }
+                }
+            }
+
+            // Fallback: if no specific roles, find admin users
+            if (approvers.isEmpty()) {
+                log.warn("⚠️ No role-based approvers found for step '{}', falling back to admin users", step.getName());
+                List<User> adminUsers = userRepository.findByRoleAndActiveAndEnabled(Role.ADMIN, true, true);
+                for (User user : adminUsers) {
+                    if (isUserEligible(user)) {
+                        approvers.add(user);
+                    }
+                }
+            }
+
+            log.debug("Total approvers found for step '{}': {}", step.getName(), approvers.size());
+            return approvers;
+            
+        } catch (Exception e) {
+            log.error("Error finding approvers for step '{}': {}", step.getName(), e.getMessage());
+            return new ArrayList<>();
+        }
+    }
+
+    /**
+     * ✅ Check if user is eligible for task assignment
+     */
+    private boolean isUserEligible(User user) {
+        return user != null && user.isActive() && user.isEnabled();
+    }
+
+    /**
+     * ✅ Create task with proper assignment
+     */
+    private WorkflowTask createTaskWithAssignment(WorkflowInstance instance, WorkflowStep step, User assignee) {
+        WorkflowTask task = new WorkflowTask();
+        task.setWorkflowInstance(instance);
+        task.setStep(step);
+        task.setAssignedTo(assignee); // ✅ CRITICAL: Proper assignment
+        task.setTitle(step.getName());
+        task.setDescription("Please review and " + 
+                           (step.getType() == StepType.APPROVAL ? "approve or reject" : "complete") + 
+                           " this workflow step");
+        task.setStatus(TaskStatus.PENDING);
+        task.setPriority(TaskPriority.NORMAL);
+        task.setCreatedAt(LocalDateTime.now());
+        task.setCreatedDate(LocalDateTime.now());
+        
+        // Set due date
+        LocalDateTime dueDate = calculateTaskDueDate(step, instance);
+        task.setDueDate(dueDate);
+        
+        return task;
+    }
+
+    /**
+     * ✅ Calculate task due date
+     */
+    private LocalDateTime calculateTaskDueDate(WorkflowStep step, WorkflowInstance instance) {
+        if (step.getSlaHours() != null && step.getSlaHours() > 0) {
+            return LocalDateTime.now().plusHours(step.getSlaHours());
+        } else if (instance.getDueDate() != null) {
+            return instance.getDueDate();
+        } else {
+            return LocalDateTime.now().plusDays(2); // Default 2-day SLA
+        }
+    }
+
+    /**
+     * ✅ Validate task action string
+     */
+    private TaskAction validateTaskAction(String action) {
+        try {
+            return TaskAction.valueOf(action.toUpperCase());
+        } catch (IllegalArgumentException e) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, 
+                "Invalid action: " + action + ". Must be APPROVE or REJECT");
+        }
+    }
+
+    /**
+     * ✅ Load task with workflow
+     */
+    private WorkflowTask loadTaskWithWorkflow(Long taskId) {
+        return taskRepository.findByIdWithWorkflow(taskId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Task not found"));
+    }
+
+    /**
+     * ✅ Validate task action authorization
+     */
+    private void validateTaskActionAuthorization(WorkflowTask task, User currentUser) {
+        boolean isAssignee = task.getAssignedTo() != null && 
+                            task.getAssignedTo().getId().equals(currentUser.getId());
+        
+        if (!isAssignee && !authz.isManagerOrAdmin()) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, 
+                "Not authorized to complete this task. Task is assigned to: " + 
+                (task.getAssignedTo() != null ? task.getAssignedTo().getUsername() : "unknown"));
+        }
+    }
+
+    /**
+     * ✅ Validate workflow and task state
+     */
+    private void validateWorkflowAndTaskState(WorkflowInstance instance, WorkflowTask task) {
+        if (instance == null) {
+            throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, "Task without workflow instance");
+        }
+        
+        // Check workflow status
+        if (instance.getStatus() == WorkflowStatus.APPROVED || 
+            instance.getStatus() == WorkflowStatus.REJECTED || 
+            instance.getStatus() == WorkflowStatus.CANCELLED) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, 
+                "Cannot complete task for a finalized workflow. Current status: " + instance.getStatus());
+        }
+
+        // Check task status
+        if (task.getStatus() != TaskStatus.PENDING) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, 
+                "Task is not in PENDING status. Current status: " + task.getStatus());
+        }
+    }
+
+    /**
+     * ✅ Complete task with enhanced details
+     */
+    private void completeTaskWithDetails(WorkflowTask task, TaskAction action, String comments, User currentUser) {
+        task.setStatus(TaskStatus.COMPLETED);
+        task.setAction(action);
+        task.setComments(comments);
+        task.setCompletedBy(currentUser);
+        task.setCompletedDate(LocalDateTime.now());
+        task.setCompletedAt(LocalDateTime.now());
+        
+        taskRepository.saveAndFlush(task);
+
+        // Log task completion
+        logWorkflowHistory(task.getWorkflowInstance(), "TASK_COMPLETED", 
+                          "Task completed by " + getUserDisplayName(currentUser) + " with action " + action, 
+                          currentUser);
+
+        // Audit task completion
+        String auditMessage = String.format("Task %s: %s%s", 
+            action == TaskAction.APPROVE ? "Approved" : "Rejected",
+            task.getTitle() != null ? task.getTitle() : "Workflow Task",
+            comments != null && !comments.isEmpty() ? " - " + comments : ""
+        );
+        
+        auditWorkflowAction(task.getWorkflowInstance(), auditMessage, currentUser, comments);
+
+        // Send notification
+        sendTaskCompletionNotification(currentUser, task, action);
+    }
+
+    /**
+     * ✅ Process workflow progression
+     */
+    private Map<String, Object> processWorkflowProgression(WorkflowInstance instance, User currentUser) {
+        Map<String, Object> result = new HashMap<>();
+        
+        try {
+            // Evaluate current step outcome
+            WorkflowStep currentStep = getCurrentStepSafe(instance);
+            if (currentStep == null) {
+                result.put("completed", false);
+                result.put("nextStep", null);
+                return result;
+            }
+
+            StepOutcome outcome = evaluateStepOutcome(instance, currentStep);
+            log.debug("Step outcome for step {}: {}", currentStep.getStepOrder(), outcome);
+            
+            switch (outcome) {
+                case REJECTED:
+                    handleWorkflowRejection(instance, currentStep, currentUser);
+                    result.put("completed", true);
+                    result.put("nextStep", null);
+                    break;
+                case APPROVED:
+                    boolean workflowCompleted = handleStepApproval(instance, currentStep, currentUser);
+                    result.put("completed", workflowCompleted);
+                    result.put("nextStep", workflowCompleted ? null : instance.getCurrentStepOrder());
+                    break;
+                case CONTINUE:
+                    result.put("completed", false);
+                    result.put("nextStep", currentStep.getStepOrder());
+                    break;
+            }
+            
+        } catch (Exception e) {
+            log.error("Error processing workflow progression: {}", e.getMessage(), e);
+            result.put("completed", false);
+            result.put("nextStep", null);
+        }
+        
+        return result;
+    }
+
+    /**
+     * ✅ Get current step safely
+     */
     private WorkflowStep getCurrentStepSafe(WorkflowInstance instance) {
         try {
             if (instance.getCurrentStepOrder() == null) return null;
             
+            // First try to get from tasks
             List<WorkflowTask> tasks = taskRepository.findByWorkflowInstanceOrderByStepOrder(instance);
             for (WorkflowTask task : tasks) {
-                if (task.getWorkflowStep() != null && 
-                    task.getWorkflowStep().getStepOrder() != null &&
-                    task.getWorkflowStep().getStepOrder().equals(instance.getCurrentStepOrder())) {
-                    return task.getWorkflowStep();
+                if (task.getStep() != null && 
+                    task.getStep().getStepOrder() != null &&
+                    task.getStep().getStepOrder().equals(instance.getCurrentStepOrder())) {
+                    return task.getStep();
                 }
             }
             
-            List<WorkflowStep> steps = stepRepository.findByTemplateOrderByStepOrderAsc(instance.getTemplate());
-            return steps.stream()
-                    .filter(s -> s.getStepOrder() != null && 
-                               s.getStepOrder().equals(instance.getCurrentStepOrder()))
-                    .findFirst()
-                    .orElse(null);
+            // Fallback to template steps
+            if (instance.getTemplate() != null) {
+                List<WorkflowStep> steps = stepRepository.findByTemplateOrderByStepOrderAsc(instance.getTemplate());
+                return steps.stream()
+                        .filter(s -> s.getStepOrder() != null && 
+                                   s.getStepOrder().equals(instance.getCurrentStepOrder()))
+                        .findFirst()
+                        .orElse(null);
+            }
+            
+            return null;
                     
         } catch (Exception e) {
             log.error("❌ Error getting current step for workflow {}: {}", instance.getId(), e.getMessage());
@@ -414,8 +784,15 @@ public class WorkflowService {
         }
     }
 
+    /**
+     * ✅ Evaluate step outcome
+     */
     private StepOutcome evaluateStepOutcome(WorkflowInstance instance, WorkflowStep step) {
         List<WorkflowTask> stepTasks = getStepTasks(instance, step);
+        
+        if (stepTasks.isEmpty()) {
+            return StepOutcome.CONTINUE;
+        }
         
         long approvals = stepTasks.stream()
                 .filter(t -> t.getAction() == TaskAction.APPROVE).count();
@@ -452,240 +829,840 @@ public class WorkflowService {
         return StepOutcome.CONTINUE;
     }
 
+    /**
+     * ✅ Get step tasks
+     */
     private List<WorkflowTask> getStepTasks(WorkflowInstance instance, WorkflowStep step) {
+        if (instance.getTasks() == null) {
+            return new ArrayList<>();
+        }
+        
         return instance.getTasks().stream()
-                .filter(t -> sameStep(t, step))
+                .filter(t -> t.getStep() != null && 
+                           t.getStep().getId().equals(step.getId()))
                 .collect(Collectors.toList());
     }
 
-    private boolean sameStep(WorkflowTask t, WorkflowStep step) {
-        return t.getWorkflowStep() != null && 
-               t.getWorkflowStep().getId().equals(step.getId());
+    /**
+     * ✅ Handle workflow rejection
+     */
+    private void handleWorkflowRejection(WorkflowInstance instance, WorkflowStep step, User currentUser) {
+        // Cancel remaining tasks
+        cancelRemainingStepTasks(instance, step, "Step rejected", currentUser);
+        
+        // Update workflow status
+        instance.setStatus(WorkflowStatus.REJECTED);
+        instance.setEndDate(LocalDateTime.now());
+        instance.setUpdatedDate(LocalDateTime.now());
+        instanceRepository.saveAndFlush(instance);
+
+        // Update document status
+        updateDocumentOnRejection(instance);
+        
+        // Log and audit
+        logWorkflowHistory(instance, "WORKFLOW_REJECTED", "Workflow rejected", currentUser);
+        auditWorkflowAction(instance, "Workflow Rejected", currentUser, "Step " + step.getStepOrder() + " rejected");
+
+        // Send notification
+        sendWorkflowRejectionNotification(instance);
     }
 
-    private void handleStepOutcome(WorkflowInstance instance, WorkflowStep step, StepOutcome outcome) {
-        switch (outcome) {
-            case REJECTED:
-                cancelRemainingTasks(instance, step, "Step rejected");
-                progressToNextStep(instance, TaskAction.REJECT);
-                break;
-            case APPROVED:
-                cancelRemainingTasks(instance, step, "Quorum reached - step approved");
-                progressToNextStep(instance, TaskAction.APPROVE);
-                break;
-            case CONTINUE:
-                log.debug("Step {} still waiting for more approvals", step.getStepOrder());
-                break;
-        }
-    }
-
-    private void cancelRemainingTasks(WorkflowInstance instance, WorkflowStep step, String reason) {
-        List<WorkflowTask> pendingTasks = instance.getTasks().stream()
-                .filter(t -> sameStep(t, step) && t.getStatus() == TaskStatus.PENDING)
-                .collect(Collectors.toList());
+    /**
+     * ✅ Handle step approval
+     */
+    private boolean handleStepApproval(WorkflowInstance instance, WorkflowStep step, User currentUser) {
+        // Cancel remaining tasks in current step
+        cancelRemainingStepTasks(instance, step, "Step approved - quorum reached", currentUser);
         
-        User systemUser = getCurrentUser();
+        // Check if this is the last step
+        int totalSteps = getTotalStepsInTemplate(instance.getTemplate());
         
-        for (WorkflowTask task : pendingTasks) {
-            try {
-                task.setStatus(TaskStatus.COMPLETED);
-                task.setAction(TaskAction.REJECT);
-                task.setComments(reason);
-                task.setCompletedBy(systemUser);
-                task.setCompletedDate(LocalDateTime.now());
-                
-                taskRepository.saveAndFlush(task);
-                logHistory(instance, "TASK_CANCELLED", 
-                          "Task auto-cancelled: " + reason + " for " + safeName(task.getAssignedTo()), 
-                          systemUser);
-            } catch (Exception e) {
-                log.warn("Failed to cancel task {}: {}", task.getId(), e.getMessage());
-            }
-        }
-    }
-
-    private void progressToNextStep(WorkflowInstance instance, TaskAction lastAction) {
-        log.info("🔄 Progressing workflow {} to next step, last action: {}", instance.getId(), lastAction);
-        
-        if (lastAction == TaskAction.REJECT) {
-            instance.setStatus(WorkflowStatus.REJECTED);
-            instance.setEndDate(LocalDateTime.now());
-            instanceRepository.saveAndFlush(instance);
-
-            tryUpdateDocumentOnRejection(instance);
-            logHistory(instance, "WORKFLOW_REJECTED", "Workflow rejected", getCurrentUser());
-
-            try {
-                if (instance.getInitiatedBy() != null) {
-                    notificationService.notifyWorkflowRejected(instance.getInitiatedBy(), instance);
-                }
-            } catch (Exception e) {
-                log.warn("Failed to send rejection notification: {}", e.getMessage());
-            }
-            return;
-        }
-
-        int totalSteps = stepRepository.findByTemplateOrderByStepOrderAsc(instance.getTemplate()).size();
-        if (instance.getCurrentStepOrder() == null) {
-            instance.setCurrentStepOrder(1);
-        }
-
         if (instance.getCurrentStepOrder() >= totalSteps) {
+            // Workflow completed
             instance.setStatus(WorkflowStatus.APPROVED);
             instance.setEndDate(LocalDateTime.now());
+            instance.setUpdatedDate(LocalDateTime.now());
             instanceRepository.saveAndFlush(instance);
 
-            tryUpdateDocumentOnApproval(instance);
-            logHistory(instance, "WORKFLOW_APPROVED", "Workflow approved", getCurrentUser());
+            // Update document status
+            updateDocumentOnApproval(instance);
+            
+            // Log and audit
+            logWorkflowHistory(instance, "WORKFLOW_APPROVED", "Workflow approved", currentUser);
+            auditWorkflowAction(instance, "Workflow Approved", currentUser, "All steps completed");
 
-            try {
-                if (instance.getInitiatedBy() != null) {
-                    notificationService.notifyWorkflowApproved(instance.getInitiatedBy(), instance);
-                }
-            } catch (Exception e) {
-                log.warn("Failed to send approval notification: {}", e.getMessage());
-            }
+            // Send notification
+            sendWorkflowApprovalNotification(instance);
+            
+            return true; // Workflow completed
         } else {
-            instance.setCurrentStepOrder(instance.getCurrentStepOrder() + 1);
+            // Move to next step
+            int nextStep = instance.getCurrentStepOrder() + 1;
+            instance.setCurrentStepOrder(nextStep);
+            instance.setUpdatedDate(LocalDateTime.now());
             instanceRepository.saveAndFlush(instance);
 
-            boolean created = generateTasksForStep(instance, instance.getCurrentStepOrder());
-            if (!created) {
+            // Generate tasks for next step
+            WorkflowTemplate template = loadTemplateWithStepsAndRoles(instance.getTemplate().getId());
+            boolean tasksCreated = generateTasksForStep(instance, template, nextStep);
+            
+            if (!tasksCreated) {
                 throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY,
-                        "No approvers found for step " + instance.getCurrentStepOrder());
+                        "No approvers found for step " + nextStep);
             }
-            logHistory(instance, "STEP_STARTED", "Step " + instance.getCurrentStepOrder() + " started", getCurrentUser());
+            
+            logWorkflowHistory(instance, "STEP_STARTED", "Step " + nextStep + " started", currentUser);
+            
+            return false; // Workflow continues
         }
     }
 
-    // ===== ALL OTHER HELPER METHODS REMAIN THE SAME =====
-    
-    private boolean generateTasksForStep(WorkflowInstance instance, int stepOrder) {
+    /**
+     * ✅ Generate tasks for specific step
+     */
+    private boolean generateTasksForStep(WorkflowInstance instance, WorkflowTemplate template, int stepOrder) {
         try {
-            List<WorkflowStep> steps = stepRepository.findByTemplateOrderByStepOrderAsc(instance.getTemplate());
-            if (steps == null || steps.isEmpty()) return false;
+            log.info("🔄 Generating tasks for step {} in workflow {}", stepOrder, instance.getId());
+            
+            if (template.getSteps() == null || template.getSteps().isEmpty()) {
+                log.warn("⚠️ Template has no steps defined");
+                return false;
+            }
 
             boolean anyTaskCreated = false;
 
+            // Find steps for the specified step order
+            List<WorkflowStep> steps = template.getSteps().stream()
+                    .filter(step -> step.getStepOrder() != null && step.getStepOrder().equals(stepOrder))
+                    .collect(Collectors.toList());
+
             for (WorkflowStep step : steps) {
-                if (step.getStepOrder() == null || step.getStepOrder() != stepOrder) continue;
+                log.info("🔄 Processing step: '{}' (order: {})", step.getName(), step.getStepOrder());
 
                 List<User> approvers = findApproversForStep(step);
-                if (approvers.isEmpty()) continue;
 
-                for (User user : approvers) {
-                    WorkflowTask task = new WorkflowTask(instance, step, user, step.getName());
-                    if (step.getSlaHours() != null && step.getSlaHours() > 0) {
-                        task.setDueDate(LocalDateTime.now().plusHours(step.getSlaHours()));
-                    } else if (instance.getDueDate() != null) {
-                        task.setDueDate(instance.getDueDate());
-                    }
+                if (approvers.isEmpty()) {
+                    log.warn("⚠️ No approvers found for step: {}", step.getName());
+                    continue;
+                }
+
+                // Create tasks
+                for (User approver : approvers) {
+                    WorkflowTask task = createTaskWithAssignment(instance, step, approver);
                     taskRepository.save(task);
 
-                    logHistory(instance, "TASK_ASSIGNED", "Task assigned to " + safeName(user), getCurrentUser());
+                    logWorkflowHistory(instance, "TASK_ASSIGNED", 
+                                     "Task '" + step.getName() + "' assigned to " + getUserDisplayName(approver), 
+                                     instance.getInitiatedBy());
 
-                    try {
-                        notificationService.notifyTaskAssigned(user, task);
-                    } catch (Exception e) {
-                        log.warn("Failed to send task assignment notification: {}", e.getMessage());
-                    }
-
+                    sendTaskAssignmentNotification(approver, task);
                     anyTaskCreated = true;
                 }
             }
 
+            log.info("✅ Task generation completed for step {}. Tasks created: {}", stepOrder, anyTaskCreated);
             return anyTaskCreated;
+            
         } catch (Exception e) {
             log.error("❌ Error generating tasks for step {}: {}", stepOrder, e.getMessage(), e);
             return false;
         }
     }
 
-    private List<User> findApproversForStep(WorkflowStep step) {
-        List<User> approvers = new ArrayList<>();
-
-        if (step.getAssignedApprovers() != null && !step.getAssignedApprovers().isEmpty()) {
-            approvers.addAll(step.getAssignedApprovers());
-            return approvers;
+    /**
+     * ✅ Get total steps in template
+     */
+    private int getTotalStepsInTemplate(WorkflowTemplate template) {
+        try {
+            List<WorkflowStep> steps = stepRepository.findByTemplateOrderByStepOrderAsc(template);
+            return steps.stream()
+                    .mapToInt(step -> step.getStepOrder() != null ? step.getStepOrder() : 0)
+                    .max()
+                    .orElse(0);
+        } catch (Exception e) {
+            log.error("Error getting total steps: {}", e.getMessage());
+            return 0;
         }
+    }
 
-        List<WorkflowStepRole> stepRoles = stepRoleRepository.findByStepId(step.getId());
+    /**
+     * ✅ Cancel remaining step tasks
+     */
+    private void cancelRemainingStepTasks(WorkflowInstance instance, WorkflowStep step, String reason, User currentUser) {
+        List<WorkflowTask> pendingTasks = instance.getTasks().stream()
+                .filter(t -> t.getStep() != null && 
+                           t.getStep().getId().equals(step.getId()) && 
+                           t.getStatus() == TaskStatus.PENDING)
+                .collect(Collectors.toList());
+        
+        for (WorkflowTask task : pendingTasks) {
+            try {
+                task.setStatus(TaskStatus.COMPLETED);
+                task.setAction(TaskAction.REJECT);
+                task.setComments(reason);
+                task.setCompletedBy(currentUser);
+                task.setCompletedDate(LocalDateTime.now());
+                task.setCompletedAt(LocalDateTime.now());
+                
+                taskRepository.saveAndFlush(task);
+                
+                logWorkflowHistory(instance, "TASK_CANCELLED", 
+                          "Task auto-cancelled: " + reason + " for " + getUserDisplayName(task.getAssignedTo()), 
+                          currentUser);
+            } catch (Exception e) {
+                log.warn("Failed to cancel task {}: {}", task.getId(), e.getMessage());
+            }
+        }
+    }
 
-        if (!stepRoles.isEmpty()) {
-            List<Role> requiredRoles = stepRoles.stream()
-                    .map(WorkflowStepRole::getRoleName)
-                    .distinct()
-                    .collect(Collectors.toList());
+    /**
+     * ✅ Build task action response
+     */
+    private Map<String, Object> buildTaskActionResponse(WorkflowTask task, TaskAction taskAction, 
+                                                       WorkflowInstance instance, Map<String, Object> progressionResult) {
+        Map<String, Object> result = new HashMap<>();
+        result.put("taskCompleted", true);
+        result.put("taskId", task.getId());
+        result.put("taskAction", taskAction.toString());
+        result.put("workflowId", instance.getId());
+        result.put("workflowStatus", instance.getStatus().toString());
+        result.put("nextStep", progressionResult.get("nextStep"));
+        result.put("workflowCompleted", progressionResult.get("completed"));
+        result.put("message", "Task " + taskAction.toString().toLowerCase() + "d successfully");
+        result.put("timestamp", LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
+        
+        return result;
+    }
 
-            for (Role role : requiredRoles) {
-                List<User> usersWithRole = userRepository.findByRole(role);
-                if (usersWithRole != null && !usersWithRole.isEmpty()) {
-                    for (User user : usersWithRole) {
-                        if (!approvers.contains(user)) {
-                            approvers.add(user);
+    // ===== DTO CONVERSION METHODS =====
+
+    /**
+     * ✅ SAFE: Convert workflow to safe DTO (FIXES UNASSIGNED AND DISAPPEARING ISSUES)
+     */
+    private Map<String, Object> convertWorkflowToSafeDTO(WorkflowInstance workflow) {
+        Map<String, Object> dto = new HashMap<>();
+        
+        try {
+            // Basic information
+            dto.put("id", workflow.getId());
+            dto.put("title", workflow.getTitle() != null ? workflow.getTitle() : "Workflow");
+            dto.put("description", workflow.getDescription());
+            dto.put("status", workflow.getStatus().toString());
+            dto.put("priority", workflow.getPriority() != null ? workflow.getPriority().toString() : "NORMAL");
+            dto.put("currentStepOrder", workflow.getCurrentStepOrder());
+
+            // Enhanced date information with proper formatting
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+            LocalDateTime created = workflow.getCreatedDate() != null ? workflow.getCreatedDate() : 
+                                   workflow.getStartDate() != null ? workflow.getStartDate() : LocalDateTime.now();
+            LocalDateTime updated = workflow.getUpdatedDate() != null ? workflow.getUpdatedDate() : created;
+            
+            dto.put("createdDate", created.format(formatter));
+            dto.put("updatedDate", updated.format(formatter));
+            dto.put("startDate", workflow.getStartDate() != null ? workflow.getStartDate().format(formatter) : created.format(formatter));
+            dto.put("endDate", workflow.getEndDate() != null ? workflow.getEndDate().format(formatter) : null);
+            dto.put("dueDate", workflow.getDueDate() != null ? workflow.getDueDate().format(formatter) : null);
+            
+            // ✅ FIXES "5 hours ago" issue
+            dto.put("lastUpdatedRelative", calculateRelativeTime(updated));
+            dto.put("lastUpdatedAbsolute", updated.format(formatter));
+
+            // ✅ Safe template handling
+            safeMapTemplateInfo(workflow, dto);
+            
+            // ✅ Safe initiator handling (FIXES "Unassigned" issue)
+            safeMapInitiatorInfo(workflow, dto);
+            
+            // ✅ Safe document handling
+            safeMapDocumentInfo(workflow, dto);
+            
+            // ✅ Safe task handling (FIXES missing approve/reject options)
+            safeMapTaskInfo(workflow, dto);
+
+            return dto;
+            
+        } catch (Exception e) {
+            log.error("❌ Error converting workflow {} to DTO: {}", 
+                     workflow != null ? workflow.getId() : "null", e.getMessage());
+            return createMinimalWorkflowDTO(workflow);
+        }
+    }
+
+    private void safeMapTemplateInfo(WorkflowInstance workflow, Map<String, Object> dto) {
+        try {
+            if (workflow.getTemplate() != null) {
+                dto.put("templateName", workflow.getTemplate().getName());
+                dto.put("templateId", workflow.getTemplate().getId());
+                dto.put("templateType", workflow.getTemplate().getType() != null ? 
+                    workflow.getTemplate().getType().toString() : "UNKNOWN");
+            } else {
+                dto.put("templateName", "No Template");
+                dto.put("templateId", null);
+                dto.put("templateType", "UNKNOWN");
+            }
+        } catch (Exception e) {
+            log.debug("Could not map template: {}", e.getMessage());
+            dto.put("templateName", "Template Error");
+            dto.put("templateId", null);
+            dto.put("templateType", "UNKNOWN");
+        }
+    }
+
+    private void safeMapInitiatorInfo(WorkflowInstance workflow, Map<String, Object> dto) {
+        try {
+            if (workflow.getInitiatedBy() != null) {
+                String displayName = getUserDisplayName(workflow.getInitiatedBy());
+                dto.put("initiatedByName", displayName);
+                dto.put("initiatedById", workflow.getInitiatedBy().getId());
+                dto.put("assignedTo", displayName); // ✅ FIX: Proper assignment display
+            } else {
+                dto.put("initiatedByName", "System");
+                dto.put("initiatedById", null);
+                dto.put("assignedTo", "System");
+            }
+        } catch (Exception e) {
+            log.debug("Could not map initiator: {}", e.getMessage());
+            dto.put("initiatedByName", "Unknown User");
+            dto.put("initiatedById", null);
+            dto.put("assignedTo", "Unknown User");
+        }
+    }
+
+    private void safeMapDocumentInfo(WorkflowInstance workflow, Map<String, Object> dto) {
+        try {
+            if (workflow.getDocument() != null) {
+                String docName = workflow.getDocument().getOriginalFilename() != null ?
+                    workflow.getDocument().getOriginalFilename() : workflow.getDocument().getFilename();
+                dto.put("documentName", docName != null ? docName : "Unknown Document");
+                dto.put("documentId", workflow.getDocument().getId());
+            } else {
+                dto.put("documentName", "No Document");
+                dto.put("documentId", null);
+            }
+        } catch (Exception e) {
+            log.debug("Could not map document: {}", e.getMessage());
+            dto.put("documentName", "Document Error");
+            dto.put("documentId", null);
+        }
+    }
+
+    private void safeMapTaskInfo(WorkflowInstance workflow, Map<String, Object> dto) {
+        try {
+            List<Map<String, Object>> taskDTOs = new ArrayList<>();
+            int totalTasks = 0;
+            int completedTasks = 0;
+            int pendingTasks = 0;
+            String currentAssignee = null;
+            boolean canCurrentUserApprove = false;
+
+            if (workflow.getTasks() != null && !workflow.getTasks().isEmpty()) {
+                totalTasks = workflow.getTasks().size();
+                
+                for (WorkflowTask task : workflow.getTasks()) {
+                    Map<String, Object> taskDto = convertTaskToSafeDTO(task);
+                    taskDTOs.add(taskDto);
+                    
+                    if (task.getStatus() == TaskStatus.COMPLETED) {
+                        completedTasks++;
+                    } else if (task.getStatus() == TaskStatus.PENDING) {
+                        pendingTasks++;
+                        if (currentAssignee == null && task.getAssignedTo() != null) {
+                            currentAssignee = getUserDisplayName(task.getAssignedTo());
+                        }
+                        
+                        // Check if current user can approve any pending task
+                        if (task.getStep() != null && task.getStep().getType() == StepType.APPROVAL) {
+                            canCurrentUserApprove = true;
                         }
                     }
                 }
             }
-        }
 
-        return approvers;
-    }
-
-    private void logHistory(WorkflowInstance instance, String action, String details, User performedBy) {
-        try {
-            WorkflowHistory history = new WorkflowHistory(instance, action, details, performedBy);
-            historyRepository.save(history);
+            dto.put("tasks", taskDTOs);
+            dto.put("totalTasks", totalTasks);
+            dto.put("completedTasks", completedTasks);
+            dto.put("pendingTasks", pendingTasks);
+            dto.put("progress", totalTasks > 0 ? (completedTasks * 100 / totalTasks) : 0);
+            dto.put("canApprove", canCurrentUserApprove);
+            dto.put("canReject", canCurrentUserApprove);
+            
+            // ✅ Override assignedTo with current task assignee if available
+            if (currentAssignee != null) {
+                dto.put("assignedTo", currentAssignee);
+            }
+            
         } catch (Exception e) {
-            log.warn("Failed to log workflow history: {}", e.getMessage());
+            log.debug("Could not map tasks: {}", e.getMessage());
+            dto.put("tasks", new ArrayList<>());
+            dto.put("totalTasks", 0);
+            dto.put("completedTasks", 0);
+            dto.put("pendingTasks", 0);
+            dto.put("progress", 0);
+            dto.put("canApprove", false);
+            dto.put("canReject", false);
         }
     }
 
-    private User getCurrentUser() {
-        String username = null;
+    /**
+     * ✅ Convert workflow to detailed DTO for workflow details view
+     */
+    private Map<String, Object> convertWorkflowToDetailedDTO(WorkflowInstance workflow, User currentUser) {
+        Map<String, Object> dto = convertWorkflowToSafeDTO(workflow);
+        
         try {
-            username = SecurityContextHolder.getContext().getAuthentication().getName();
-        } catch (Exception ignored) {}
-        if (username == null) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "No authenticated user");
+            // Add detailed task information with user permissions
+            List<Map<String, Object>> detailedTasks = new ArrayList<>();
+            
+            if (workflow.getTasks() != null) {
+                for (WorkflowTask task : workflow.getTasks()) {
+                    Map<String, Object> taskDto = convertTaskToDetailedDTO(task);
+                    
+                    // Add user-specific permissions
+                    boolean canUserApprove = canUserApproveTask(task, currentUser);
+                    boolean canUserReject = canUserRejectTask(task, currentUser);
+                    
+                    taskDto.put("canApprove", canUserApprove);
+                    taskDto.put("canReject", canUserReject);
+                    taskDto.put("canEdit", canUserApprove || canUserReject);
+                    
+                    detailedTasks.add(taskDto);
+                }
+            }
+            
+            dto.put("detailedTasks", detailedTasks);
+            dto.put("canCurrentUserApprove", hasUserPendingTasks(workflow, currentUser));
+            dto.put("userPermissions", getUserWorkflowPermissions(workflow, currentUser));
+            
+            // Add workflow history if needed
+            if (workflow.getHistory() != null) {
+                List<Map<String, Object>> historyDTOs = workflow.getHistory().stream()
+                        .map(this::convertHistoryToDTO)
+                        .collect(Collectors.toList());
+                dto.put("history", historyDTOs);
+            }
+            
+        } catch (Exception e) {
+            log.error("Error creating detailed workflow DTO: {}", e.getMessage());
         }
-        return userRepository.findByUsername(username)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Logged in user not found"));
+        
+        return dto;
     }
 
-    private Integer safeSlaHours(Integer hours) {
-        if (hours == null || hours <= 0) return null;
-        return hours;
+    /**
+     * ✅ Convert task to safe DTO
+     */
+    private Map<String, Object> convertTaskToSafeDTO(WorkflowTask task) {
+        Map<String, Object> dto = new HashMap<>();
+        
+        try {
+            dto.put("id", task.getId());
+            dto.put("title", task.getTitle() != null ? task.getTitle() : "Task");
+            dto.put("status", task.getStatus().toString());
+            dto.put("comments", task.getComments());
+            dto.put("action", task.getAction() != null ? task.getAction().toString() : null);
+            
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+            dto.put("createdAt", task.getCreatedDate() != null ? 
+                    task.getCreatedDate().format(formatter) : null);
+            dto.put("completedAt", task.getCompletedDate() != null ? 
+                    task.getCompletedDate().format(formatter) : null);
+            dto.put("dueDate", task.getDueDate() != null ? 
+                    task.getDueDate().format(formatter) : null);
+            
+            // Safe assignee handling
+            if (task.getAssignedTo() != null) {
+                dto.put("assignedTo", getUserDisplayName(task.getAssignedTo()));
+                dto.put("assignedToId", task.getAssignedTo().getId());
+            } else {
+                dto.put("assignedTo", "Unassigned");
+                dto.put("assignedToId", null);
+            }
+            
+            // Safe step handling
+            if (task.getStep() != null) {
+                dto.put("stepName", task.getStep().getName());
+                dto.put("stepOrder", task.getStep().getStepOrder());
+                dto.put("stepType", task.getStep().getType().toString());
+            } else {
+                dto.put("stepName", "Unknown Step");
+                dto.put("stepOrder", 0);
+                dto.put("stepType", "UNKNOWN");
+            }
+            
+        } catch (Exception e) {
+            log.warn("Error creating task DTO: {}", e.getMessage());
+        }
+        
+        return dto;
     }
 
-    private String safeName(User user) {
+    /**
+     * ✅ Convert task to detailed DTO with approval options
+     */
+    private Map<String, Object> convertTaskToDetailedDTO(WorkflowTask task) {
+        Map<String, Object> dto = convertTaskToSafeDTO(task);
+        
+        try {
+            // Add detailed information
+            dto.put("description", task.getDescription());
+            dto.put("priority", task.getPriority() != null ? task.getPriority().toString() : "NORMAL");
+            
+            // Add action capabilities
+            boolean isPending = task.getStatus() == TaskStatus.PENDING;
+            boolean isApprovalStep = task.getStep() != null && task.getStep().getType() == StepType.APPROVAL;
+            
+            dto.put("canApprove", isPending && isApprovalStep);
+            dto.put("canReject", isPending && isApprovalStep);
+            dto.put("isPending", isPending);
+            dto.put("isOverdue", isTaskOverdue(task));
+            
+            // Add workflow context
+            if (task.getWorkflowInstance() != null) {
+                dto.put("workflowId", task.getWorkflowInstance().getId());
+                dto.put("workflowTitle", task.getWorkflowInstance().getTitle());
+                dto.put("workflowStatus", task.getWorkflowInstance().getStatus().toString());
+            }
+            
+            // Add completion details
+            if (task.getCompletedBy() != null) {
+                dto.put("completedByName", getUserDisplayName(task.getCompletedBy()));
+                dto.put("completedById", task.getCompletedBy().getId());
+            }
+            
+        } catch (Exception e) {
+            log.warn("Error creating detailed task DTO: {}", e.getMessage());
+        }
+        
+        return dto;
+    }
+
+    /**
+     * ✅ Convert history to DTO
+     */
+    private Map<String, Object> convertHistoryToDTO(WorkflowHistory history) {
+        Map<String, Object> dto = new HashMap<>();
+        
+        try {
+            dto.put("id", history.getId());
+            dto.put("action", history.getAction());
+            dto.put("details", history.getDetails());
+            dto.put("actionDate", history.getActionDate() != null ? 
+                    history.getActionDate().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) : null);
+            
+            if (history.getPerformedBy() != null) {
+                dto.put("performedByName", getUserDisplayName(history.getPerformedBy()));
+                dto.put("performedById", history.getPerformedBy().getId());
+            }
+            
+        } catch (Exception e) {
+            log.warn("Error creating history DTO: {}", e.getMessage());
+        }
+        
+        return dto;
+    }
+
+    // ===== UTILITY METHODS =====
+
+    /**
+     * ✅ Get user display name with fallback
+     */
+    private String getUserDisplayName(User user) {
         if (user == null) return "Unknown";
-        String n = user.getFullName();
-        return (n == null || n.isBlank()) ? user.getUsername() : n;
+        String fullName = user.getFullName();
+        return (fullName != null && !fullName.trim().isEmpty()) ? fullName : user.getUsername();
     }
 
-    private void trySetDocumentPending(Document document) {
-        if (document == null) return;
+    /**
+     * ✅ Calculate relative time (FIXES "5 hours ago" issue)
+     */
+    private String calculateRelativeTime(LocalDateTime dateTime) {
         try {
-            if (document.getStatus() == null || document.getStatus() == DocumentStatus.DRAFT) {
-                document.setStatus(DocumentStatus.PENDING);
-                document.setApprovedBy(null);
-                document.setApprovalDate(null);
-                document.setRejectionReason(null);
+            LocalDateTime now = LocalDateTime.now();
+            long minutes = java.time.Duration.between(dateTime, now).toMinutes();
+            
+            if (minutes < 0) return "In the future"; // Handle future dates
+            if (minutes < 1) return "Just now";
+            if (minutes < 60) return minutes + " minute" + (minutes == 1 ? "" : "s") + " ago";
+            
+            long hours = minutes / 60;
+            if (hours < 24) return hours + " hour" + (hours == 1 ? "" : "s") + " ago";
+            
+            long days = hours / 24;
+            if (days < 7) return days + " day" + (days == 1 ? "" : "s") + " ago";
+            
+            long weeks = days / 7;
+            if (weeks < 4) return weeks + " week" + (weeks == 1 ? "" : "s") + " ago";
+            
+            long months = days / 30;
+            return months + " month" + (months == 1 ? "" : "s") + " ago";
+            
+        } catch (Exception e) {
+            return "Unknown";
+        }
+    }
+
+    /**
+     * ✅ Check if task is overdue
+     */
+    private boolean isTaskOverdue(WorkflowTask task) {
+        return task.getDueDate() != null && 
+               LocalDateTime.now().isAfter(task.getDueDate()) && 
+               task.getStatus() == TaskStatus.PENDING;
+    }
+
+    /**
+     * ✅ Check if user can access workflow
+     */
+    private boolean canUserAccessWorkflow(User user, WorkflowInstance workflow) {
+        try {
+            boolean isInitiator = workflow.getInitiatedBy() != null && 
+                                 workflow.getInitiatedBy().getId().equals(user.getId());
+            
+            boolean hasTask = workflow.getTasks() != null && 
+                             workflow.getTasks().stream().anyMatch(task -> 
+                                 task.getAssignedTo() != null && 
+                                 task.getAssignedTo().getId().equals(user.getId()));
+            
+            boolean isAdminOrManager = user.getRole() == Role.ADMIN || user.getRole() == Role.MANAGER;
+            
+            return isInitiator || hasTask || isAdminOrManager;
+        } catch (Exception e) {
+            log.error("Error checking workflow access: {}", e.getMessage());
+            return false;
+        }
+    }
+
+    /**
+     * ✅ Check if user can approve task
+     */
+    private boolean canUserApproveTask(WorkflowTask task, User user) {
+        return task.getStatus() == TaskStatus.PENDING &&
+               task.getAssignedTo() != null &&
+               task.getAssignedTo().getId().equals(user.getId()) &&
+               task.getStep() != null &&
+               task.getStep().getType() == StepType.APPROVAL;
+    }
+
+    /**
+     * ✅ Check if user can reject task
+     */
+    private boolean canUserRejectTask(WorkflowTask task, User user) {
+        return canUserApproveTask(task, user); // Same conditions for reject
+    }
+
+    /**
+     * ✅ Check if user has pending tasks
+     */
+    private boolean hasUserPendingTasks(WorkflowInstance workflow, User user) {
+        return workflow.getTasks() != null &&
+               workflow.getTasks().stream().anyMatch(task ->
+                   task.getStatus() == TaskStatus.PENDING &&
+                   task.getAssignedTo() != null &&
+                   task.getAssignedTo().getId().equals(user.getId()));
+    }
+
+    /**
+     * ✅ Get user workflow permissions
+     */
+    private Map<String, Object> getUserWorkflowPermissions(WorkflowInstance workflow, User user) {
+        Map<String, Object> permissions = new HashMap<>();
+        try {
+            permissions.put("canView", canUserAccessWorkflow(user, workflow));
+            permissions.put("canEdit", workflow.getInitiatedBy() != null && 
+                                     workflow.getInitiatedBy().getId().equals(user.getId()));
+            permissions.put("canCancel", authz.isInitiatorOrManager(workflow));
+            permissions.put("hasPendingTasks", hasUserPendingTasks(workflow, user));
+            permissions.put("isInitiator", workflow.getInitiatedBy() != null && 
+                                         workflow.getInitiatedBy().getId().equals(user.getId()));
+        } catch (Exception e) {
+            log.error("Error calculating user permissions: {}", e.getMessage());
+        }
+        return permissions;
+    }
+
+    /**
+     * ✅ Create minimal workflow DTO on error
+     */
+    private Map<String, Object> createMinimalWorkflowDTO(WorkflowInstance workflow) {
+        Map<String, Object> minimal = new HashMap<>();
+        try {
+            minimal.put("id", workflow.getId());
+            minimal.put("status", workflow.getStatus().toString());
+            minimal.put("title", workflow.getTitle() != null ? workflow.getTitle() : "Workflow");
+            minimal.put("assignedTo", "Error Loading");
+            minimal.put("lastUpdatedRelative", "Unknown");
+            minimal.put("tasks", new ArrayList<>());
+            minimal.put("totalTasks", 0);
+            minimal.put("completedTasks", 0);
+        } catch (Exception e) {
+            log.error("Error creating minimal DTO: {}", e.getMessage());
+        }
+        return minimal;
+    }
+
+    /**
+     * ✅ Get current user safely
+     */
+    private User getCurrentUserSafe() {
+        try {
+            String username = SecurityContextHolder.getContext().getAuthentication().getName();
+            return userRepository.findByUsername(username)
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User not found"));
+        } catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Authentication error");
+        }
+    }
+
+    /**
+     * ✅ Parse priority string
+     */
+    private WorkflowPriority parsePriority(String priority) {
+        try {
+            return priority != null ? WorkflowPriority.valueOf(priority.toUpperCase()) : WorkflowPriority.NORMAL;
+        } catch (IllegalArgumentException e) {
+            return WorkflowPriority.NORMAL;
+        }
+    }
+
+    /**
+     * ✅ Get filtered user workflows
+     */
+    private Page<WorkflowInstance> getFilteredUserWorkflows(User user, String status, Pageable pageable) {
+        if (status != null && !status.equals("All Statuses")) {
+            try {
+                WorkflowStatus workflowStatus = WorkflowStatus.valueOf(status.toUpperCase());
+                return instanceRepository.findByInitiatedByAndStatusWithDetails(user, workflowStatus, pageable);
+            } catch (IllegalArgumentException e) {
+                // Invalid status, return all workflows
+                return instanceRepository.findByInitiatedByWithDetails(user, pageable);
+            }
+        } else {
+            return instanceRepository.findByInitiatedByWithDetails(user, pageable);
+        }
+    }
+
+    /**
+     * ✅ Build paginated response
+     */
+    private Map<String, Object> buildPaginatedResponse(Page<?> pageResult, List<?> items) {
+        Map<String, Object> response = new HashMap<>();
+        response.put("workflows", items);
+        response.put("currentPage", pageResult.getNumber());
+        response.put("pageSize", pageResult.getSize());
+        response.put("totalItems", pageResult.getTotalElements());
+        response.put("totalPages", pageResult.getTotalPages());
+        response.put("hasNext", pageResult.hasNext());
+        response.put("hasPrevious", pageResult.hasPrevious());
+        response.put("isFirst", pageResult.isFirst());
+        response.put("isLast", pageResult.isLast());
+        return response;
+    }
+
+    /**
+     * ✅ Create empty paginated response
+     */
+    private Map<String, Object> createEmptyPaginatedResponse(int page, int size) {
+        Map<String, Object> emptyResponse = new HashMap<>();
+        emptyResponse.put("workflows", new ArrayList<>());
+        emptyResponse.put("currentPage", page);
+        emptyResponse.put("pageSize", size);
+        emptyResponse.put("totalItems", 0L);
+        emptyResponse.put("totalPages", 0);
+        emptyResponse.put("hasNext", false);
+        emptyResponse.put("hasPrevious", false);
+        emptyResponse.put("isFirst", true);
+        emptyResponse.put("isLast", true);
+        return emptyResponse;
+    }
+
+    // ===== VALIDATION AND STATE MANAGEMENT =====
+
+    /**
+     * ✅ Validate cancellation authorization
+     */
+    private void validateCancellationAuthorization(WorkflowInstance instance) {
+        if (!authz.isInitiatorOrManager(instance)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Not authorized to cancel workflow");
+        }
+    }
+
+    /**
+     * ✅ Validate cancellation state
+     */
+    private void validateCancellationState(WorkflowInstance instance) {
+        if (instance.getStatus() == WorkflowStatus.APPROVED || instance.getStatus() == WorkflowStatus.REJECTED) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "Cannot cancel a finalized workflow");
+        }
+        
+        if (instance.getStatus() == WorkflowStatus.CANCELLED) {
+            // Idempotent - already cancelled
+            return;
+        }
+    }
+
+    /**
+     * ✅ Cancel pending tasks for workflow cancellation
+     */
+    private void cancelPendingTasks(WorkflowInstance instance, String reason, User currentUser) {
+        if (instance.getTasks() == null) return;
+        
+        List<WorkflowTask> pendingTasks = instance.getTasks().stream()
+                .filter(task -> task.getStatus() == TaskStatus.PENDING)
+                .collect(Collectors.toList());
+        
+        for (WorkflowTask task : pendingTasks) {
+            try {
+                task.setStatus(TaskStatus.COMPLETED);
+                task.setAction(TaskAction.REJECT);
+                task.setComments("Workflow cancelled: " + (reason != null ? reason : "No reason provided"));
+                task.setCompletedBy(currentUser);
+                task.setCompletedDate(LocalDateTime.now());
+                task.setCompletedAt(LocalDateTime.now());
+                
+                taskRepository.saveAndFlush(task);
+                
+                logWorkflowHistory(instance, "TASK_CANCELLED", 
+                          "Task cancelled due to workflow cancellation for " + getUserDisplayName(task.getAssignedTo()), 
+                          currentUser);
+            } catch (Exception e) {
+                log.warn("Failed to cancel task {}: {}", task.getId(), e.getMessage());
+            }
+        }
+    }
+
+    // ===== STATUS UPDATE METHODS =====
+
+    /**
+     * ✅ Update document status safely
+     */
+    private void updateDocumentStatus(Document document, DocumentStatus status) {
+        try {
+            if (document != null) {
+                document.setStatus(status);
+                if (status == DocumentStatus.PENDING) {
+                    document.setApprovedBy(null);
+                    document.setApprovalDate(null);
+                    document.setRejectionReason(null);
+                }
                 documentRepository.save(document);
+                log.debug("Updated document {} status to {}", document.getId(), status);
             }
         } catch (Exception e) {
-            log.warn("Failed to set document pending: {}", e.getMessage());
+            log.warn("Failed to update document status: {}", e.getMessage());
         }
     }
 
-    private void tryUpdateDocumentOnApproval(WorkflowInstance instance) {
+    /**
+     * ✅ Update document on approval
+     */
+    private void updateDocumentOnApproval(WorkflowInstance instance) {
         try {
             Document doc = instance.getDocument();
             if (doc == null) return;
 
             doc.setStatus(DocumentStatus.APPROVED);
 
+            // Find the last approval task
             WorkflowTask lastApprovalTask = null;
             if (instance.getTasks() != null) {
                 lastApprovalTask = instance.getTasks().stream()
@@ -694,7 +1671,7 @@ public class WorkflowService {
                         .orElse(null);
             }
 
-            if (lastApprovalTask != null) {
+            if (lastApprovalTask != null && lastApprovalTask.getCompletedBy() != null) {
                 doc.setApprovedBy(lastApprovalTask.getCompletedBy());
                 doc.setApprovalDate(instance.getEndDate() != null ? instance.getEndDate() : LocalDateTime.now());
             } else {
@@ -704,36 +1681,171 @@ public class WorkflowService {
 
             doc.setRejectionReason(null);
             documentRepository.save(doc);
+            
+            log.info("✅ Document {} approved", doc.getId());
         } catch (Exception e) {
             log.warn("Failed to update document on approval: {}", e.getMessage());
         }
     }
 
-    private void tryUpdateDocumentOnRejection(WorkflowInstance instance) {
+    /**
+     * ✅ Update document on rejection
+     */
+    private void updateDocumentOnRejection(WorkflowInstance instance) {
         try {
             Document doc = instance.getDocument();
             if (doc == null) return;
 
             doc.setStatus(DocumentStatus.REJECTED);
 
+            // Find the last rejection task
             WorkflowTask lastTask = null;
             if (instance.getTasks() != null) {
                 lastTask = instance.getTasks().stream()
-                        .filter(t -> t.getCompletedDate() != null)
+                        .filter(t -> t.getCompletedDate() != null && t.getAction() == TaskAction.REJECT)
                         .max(Comparator.comparing(WorkflowTask::getCompletedDate))
                         .orElse(null);
             }
 
-            if (lastTask != null) {
+            if (lastTask != null && lastTask.getComments() != null) {
                 doc.setRejectionReason(lastTask.getComments());
+            } else {
+                doc.setRejectionReason("Workflow rejected");
             }
 
             doc.setApprovedBy(null);
             doc.setApprovalDate(null);
 
             documentRepository.save(doc);
+            
+            log.info("✅ Document {} rejected", doc.getId());
         } catch (Exception e) {
             log.warn("Failed to update document on rejection: {}", e.getMessage());
         }
+    }
+
+    // ===== LOGGING AND AUDIT METHODS =====
+
+    /**
+     * ✅ Log workflow history
+     */
+    private void logWorkflowHistory(WorkflowInstance instance, String action, String details, User performedBy) {
+        try {
+            WorkflowHistory history = new WorkflowHistory();
+            history.setWorkflowInstance(instance);
+            history.setAction(action);
+            history.setDetails(details);
+            history.setPerformedBy(performedBy);
+            history.setActionDate(LocalDateTime.now());
+            
+            historyRepository.save(history);
+        } catch (Exception e) {
+            log.warn("Failed to log workflow history: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Audit workflow action
+     */
+    private void auditWorkflowAction(WorkflowInstance instance, String action, User performedBy, String details) {
+        try {
+            String message = action + " - Workflow: " + instance.getTitle() + 
+                           (details != null && !details.isEmpty() ? " (" + details + ")" : "");
+            
+            auditService.logWorkflowAction(message, instance.getId().toString(), performedBy.getUsername());
+        } catch (Exception e) {
+            log.warn("Failed to audit workflow action: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Handle workflow creation failure
+     */
+    private void handleWorkflowCreationFailure(UUID templateId, Long userId, Exception e) {
+        try {
+            User user = userRepository.findById(userId).orElse(null);
+            if (user != null) {
+                auditService.logWorkflowActionWithStatus(
+                    "Workflow Creation Failed: " + e.getMessage(),
+                    "Template-" + templateId,
+                    user.getUsername(),
+                    AuditLog.Status.FAILED
+                );
+            }
+        } catch (Exception auditEx) {
+            log.warn("Failed to log creation failure audit: {}", auditEx.getMessage());
+        }
+    }
+
+    // ===== NOTIFICATION METHODS =====
+
+    /**
+     * ✅ Send task assignment notification
+     */
+    private void sendTaskAssignmentNotification(User assignee, WorkflowTask task) {
+        try {
+            notificationService.notifyTaskAssigned(assignee, task);
+        } catch (Exception e) {
+            log.warn("Failed to send task assignment notification to {}: {}", 
+                    assignee.getUsername(), e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Send task completion notification
+     */
+    private void sendTaskCompletionNotification(User completedBy, WorkflowTask task, TaskAction action) {
+        try {
+            notificationService.notifyTaskCompleted(completedBy, task, action);
+        } catch (Exception e) {
+            log.warn("Failed to send task completion notification: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Send workflow approval notification
+     */
+    private void sendWorkflowApprovalNotification(WorkflowInstance instance) {
+        try {
+            if (instance.getInitiatedBy() != null) {
+                notificationService.notifyWorkflowApproved(instance.getInitiatedBy(), instance);
+            }
+        } catch (Exception e) {
+            log.warn("Failed to send workflow approval notification: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Send workflow rejection notification
+     */
+    private void sendWorkflowRejectionNotification(WorkflowInstance instance) {
+        try {
+            if (instance.getInitiatedBy() != null) {
+                notificationService.notifyWorkflowRejected(instance.getInitiatedBy(), instance);
+            }
+        } catch (Exception e) {
+            log.warn("Failed to send workflow rejection notification: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Send cancellation notifications
+     */
+    private void sendCancellationNotifications(WorkflowInstance instance, User currentUser) {
+        try {
+            if (instance.getInitiatedBy() != null && 
+                !instance.getInitiatedBy().getId().equals(currentUser.getId())) {
+                notificationService.notifyWorkflowRejected(instance.getInitiatedBy(), instance);
+            }
+        } catch (Exception e) {
+            log.warn("Failed to send cancellation notification: {}", e.getMessage());
+        }
+    }
+
+    /**
+     * ✅ Safe SLA hours
+     */
+    private Integer safeSlaHours(Integer hours) {
+        return (hours != null && hours > 0) ? hours : null;
     }
 }
